--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "name": "quiz",
-  "private": true,
   "homepage": ".",
-  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.191",
+    "lodash": "^4.17.21",
     "normalize.css": "^8.0.1",
     "sass": "^1.59.3",
+    "typescript": "^4.9.3",
     "vite": "^4.2.0"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
